[package]
name = "marcel"
description = "Dynamic theme library for the iced GUI framework"

version = "0.1.0"
edition = "2021"

readme = "README.md"
repository = "https://github.com/micro-rust/marcel"

license = "MIT OR Apache-2.0"

categories = ["database", "data-structures", "graphics", "gui"]
keywords = ["gui", "theme", "graphics", "application"]

publish = true



[dependencies]

[dependencies.iced]
version = "0.4"

[dependencies.serde]
version = "1"
features = ["derive"]
