[package]
name = "marcel"
description = "Dynamic theme library for the iced GUI framework"

version = "0.1.1"
edition = "2021"

readme = "README.md"
repository = "https://github.com/micro-rust/marcel"

license = "MIT OR MPL-2.0"

categories = ["database", "data-structures", "graphics", "gui"]
keywords = ["gui", "theme", "graphics", "application"]

publish = true

exclude = [
    "src/checkbox",
    "src/radio",
    "src/rule",
    "src/slider",
]



[dependencies]

[dependencies.iced]
version = "0.6.0"
features = [
    "wgpu", "debug",
    "default_system_font",
    "tokio",
]

[dependencies.iced_native]
version = "0.7"

[dependencies.ron]
version = "0.8"
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]



[features]
dev = ["ron"]
