[package]
name = "marcel"
description = "Dynamic theme library for the iced GUI framework"

version = "0.1.2"
edition = "2021"

readme = "README.md"
repository = "https://github.com/micro-rust/marcel"

license = "MIT OR MPL-2.0"

categories = ["database", "data-structures", "graphics", "gui"]
keywords = ["gui", "theme", "graphics", "application"]

publish = true

exclude = [
    "src/checkbox",
    "src/radio",
    "src/rule",
    "src/slider",
]



[dependencies]

[dependencies.iced]
version = "0.10"

[dependencies.ron]
version = "0.8"
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]



[features]
dev = ["ron"]
